--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,38 +1,69 @@
-.App {
+:root {
+  --main-color: #fd5c32;
+}
+
+* {
+  box-sizing: border-box;
+}
+
+.searchbar {
+  position: relative;
+  flex-grow: 1;
+}
+.searchbar-input {
+  width: 100%;
+  border-radius: 30px;
+  padding: 10px 30px 10px 10px;
+  outline: none;
+  border: none;
+}
+.icon-searchbar {
+  position: absolute;
+  top: 50%;
+  right: 10px;
+  transform: translateY(-50%);
+}
+
+.hamburger {
+  color: white !important;
+  border-color: white !important;
+  border-radius: 100%;
+  padding: 0.3rem;
+}
+
+.bg-custom {
+  background-color: var(--main-color) !important;
+}
+
+.navbar-nav-link {
+  color: white !important;
+  padding: 5px 20px !important;
+  border: 1px solid white !important;
+  margin: 5px 10px 5px 0;
+  border-radius: 30px;
+  width: 120px;
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.link-register {
+  color: black !important;
+  background-color: white;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+@media only screen and (max-width: 600px) {
+  .navbar-brand {
+    text-align: center;
+  }
+  .navbar-nav-link {
+    margin: 5px auto 5px auto;
   }
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+@media only screen and (max-width: 992px) {
+  .navbar-brand {
+    justify-self: center !important;
   }
-  to {
-    transform: rotate(360deg);
+  .navbar-nav-link {
+    margin: 5px auto 5px auto;
   }
 }
