--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -78,3 +78,10 @@
     margin: 5px auto 5px auto;
   }
 }
+
+.cart-qty {
+  border: 1px solid white;
+  padding: 5px;
+  border-radius: 100%;
+  background-color: red !important;
+}
