--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,11 +1,19 @@
 :root {
   --main-color: #fd5c32;
+  --background-color: #f5f5f5;
 }
-
+main {
+  min-width: 100vw;
+  min-height: 83vh;
+  background-color: var(--background-color);
+}
 * {
   box-sizing: border-box;
 }
 
+.containerCustom {
+  background-color: white;
+}
 .searchbar {
   position: relative;
   flex-grow: 1;
@@ -84,4 +92,11 @@
   padding: 5px;
   border-radius: 100%;
   background-color: red !important;
+}
+
+.bg-primary {
+  background-color: var(--main-color) !important;
+}
+.bg-primary:hover {
+  background-color: #cb5c0d !important;
 }
